--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,11 +32,12 @@ jobs:
 
       - name: Terraform Init
         run: |
-          terraform init \
-            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
-            -backend-config="dynamodb_table=${{ secrets.TF_LOCK_TABLE }}" \
-            -backend-config="region=us-east-1" \
-            -backend-config="key=terraform.tfstate"
+         terraform init \
+          -backend-config="bucket=vk-terraform-state-20250918" \
+          -backend-config="dynamodb_table=terraform-locks" \
+          -backend-config="region=us-east-1" \
+          -backend-config="key=terraform.tfstate"
+
 
       - name: Terraform Validate
         run: terraform validate
