--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,6 @@ jobs:
   terraform:
     name: Terraform Plan
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,12 +31,11 @@ jobs:
 
       - name: Terraform Init
         run: |
-         terraform init \
-          -backend-config="bucket=vk-terraform-state-20250918" \
-          -backend-config="dynamodb_table=terraform-locks" \
-          -backend-config="region=us-east-1" \
-          -backend-config="key=terraform.tfstate"
-
+          terraform init \
+            -backend-config="bucket=vk-terraform-state-20250918" \
+            -backend-config="dynamodb_table=terraform-locks" \
+            -backend-config="region=us-east-1" \
+            -backend-config="key=terraform.tfstate"
 
       - name: Terraform Validate
         run: terraform validate
@@ -45,14 +43,19 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
+      - name: Upload Terraform Plan
+        uses: actions/upload-artifact@v3
+        with:
+          name: tfplan
+          path: tfplan
+
   apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform
     environment:
-      name: production  # <-- Set up an environment called 'production' in GitHub with required reviewers
+      name: production
       url: https://aws.amazon.com/console/
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -67,6 +70,11 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
+
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v3
+        with:
+          name: tfplan
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
@@ -76,9 +84,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform
     environment:
-      name: production  # <-- same manual approval environment
+      name: production
       url: https://aws.amazon.com/console/
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -93,6 +100,14 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
+
+      - name: Terraform Init
+        run: |
+          terraform init \
+            -backend-config="bucket=vk-terraform-state-20250918" \
+            -backend-config="dynamodb_table=terraform-locks" \
+            -backend-config="region=us-east-1" \
+            -backend-config="key=terraform.tfstate"
 
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
