--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,7 +82,7 @@ jobs:
   destroy:
     name: Terraform Destroy
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: [ terraform, apply]
     environment:
       name: production
       url: https://aws.amazon.com/console/
