--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,102 +12,76 @@ permissions:
 
 jobs:
   terraform:
-    name: Terraform Plan
+    name: Deploy Terraform to AWS
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::100025280701:role/Workflows
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
           aws-region: us-east-1
 
+      # Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
 
+      # Terraform Init
       - name: Terraform Init
-        run: |
-          terraform init -upgrade \
-            -backend-config="bucket=vk-terraform-state-20250918" \
-            -backend-config="dynamodb_table=terraform-locks" \
-            -backend-config="region=us-east-1" \
-            -backend-config="key=terraform.tfstate"
+        run: terraform init -upgrade \
+          -backend-config="bucket=vk-terraform-state-20250918" \
+          -backend-config="dynamodb_table=terraform-locks" \
+          -backend-config="region=us-east-1" \
+          -backend-config="key=terraform.tfstate"
 
+      # Terraform Validate
       - name: Terraform Validate
         run: terraform validate
 
+      # Terraform Plan
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-      - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v4
-        with:
-          name: tfplan
-          path: tfplan
-
-  apply:
-    name: Terraform Apply
-    runs-on: ubuntu-latest
-    needs: terraform
-    environment:
-      name: production
-      url: https://aws.amazon.com/console/
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::100025280701:role/Workflows
-          aws-region: us-east-1
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.8.5
-
-      - name: Download Terraform Plan
-        uses: actions/download-artifact@v4
-        with:
-          name: tfplan
-
+      # Terraform Apply (only on push to main, not on PRs)
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
 
   destroy:
     name: Terraform Destroy
     runs-on: ubuntu-latest
-    needs: [ terraform, apply]
     environment:
-      name: production
-      url: https://aws.amazon.com/console/
+      name: production  # requires manual approval
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::100025280701:role/Workflows
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
           aws-region: us-east-1
 
+      # Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
 
+      # Terraform Init
       - name: Terraform Init
-        run: |
-          terraform init \
-            -backend-config="bucket=vk-terraform-state-20250918" \
-            -backend-config="dynamodb_table=terraform-locks" \
-            -backend-config="region=us-east-1" \
-            -backend-config="key=terraform.tfstate"
+        run: terraform init -upgrade \
+          -backend-config="bucket=vk-terraform-state-20250918" \
+          -backend-config="dynamodb_table=terraform-locks" \
+          -backend-config="region=us-east-1" \
+          -backend-config="key=terraform.tfstate"
 
+      # Terraform Destroy
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
