--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,10 +75,10 @@ jobs:
       # Terraform Init
       - name: Terraform Init
         run: terraform init -upgrade \
-          -backend-config="bucket=vk-terraform-state-20250918" \
-          -backend-config="dynamodb_table=terraform-locks" \
-          -backend-config="region=us-east-1" \
-          -backend-config="key=terraform.tfstate"
+          # -backend-config="bucket=vk-terraform-state-20250918" \
+          # -backend-config="dynamodb_table=terraform-locks" \
+          # -backend-config="region=us-east-1" \
+          # -backend-config="key=terraform.tfstate"
 
       # Terraform Destroy
       - name: Terraform Destroy
