--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,6 +50,7 @@ jobs:
   destroy:
     name: Terraform Destroy
     runs-on: ubuntu-latest
+    needs: terraform
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
